--- a/www/styles/theme.css
+++ b/www/styles/theme.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 
 @font-face {
     font-family: 'Google Sans';
@@ -8,10 +8,55 @@
 }
 
 :root {
-    --mo-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    --mo-border-radius: 4px;
     --mo-scrollbar-background-color: transperent;
     --mo-scrollbar-foreground-color: rgba(128, 128, 128, 0.75);
+}
+
+* {
+    font-family: var(--mo-font-family);
+    font-weight: 400;
+    color: var(--mo-color-foreground);
+    box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+    height: 100%;
+    scrollbar-width: thin;
+    scrollbar-color: var(--mo-scrollbar-foreground-color) var(--mo-scrollbar-background-color);
+}
+
+/* TODO [MIG]: body {
+    position: absolute;
+    font-size: var(--mo-fontsize-d);
+    margin: 0;
+    width: 100% !important;
+    height: 100% !important;
+    background-color: var(--mo-color-background);
+    overflow: hidden;
+} */
+
+body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    background-color: var(--mo-scrollbar-background-color);
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--mo-scrollbar-foreground-color);
+}
+
+mo-application-host {
+    --mo-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --mo-border-radius: 4px;
     /* Lengths */
     --mo-length-1: 480px;
     --mo-length-2: 768px;
@@ -23,11 +68,6 @@
     --mo-min-width: var(--mo-length-3);
     --mo-min-height: var(--mo-length-2);
     --mo-settings-width: var(--mo-length-1);
-    --mo-popup-compact-width: var(--mo-length-1);
-    --mo-popup-width: var(--mo-length-3);
-    --mo-popup-large-width: var(--mo-length-5);
-    --mo-popup-min-height: var(--mo-length-1);
-    --mo-sidebar-width: 275px;
     --mo-elm-height-d: 48px;
     --mo-elm-height-field: calc(var(--mo-elm-height-d) - 2px);
     --mo-elm-height-s: 36px;
@@ -88,13 +128,13 @@
     --mdc-theme-primary: var(--mo-accent) !important;
     --mdc-theme-secondary: var(--mo-accent) !important;
     --mdc-icon-font: Material Icons Sharp !important;
-    --mdc-theme-text-primary-on-dark: var(--mo-surface) !important;
+    --mdc-theme-text-primary-on-dark: var(--mo-color-surface) !important;
     --mdc-switch-unchecked-color: var(--mo-color-foreground) !important;
     --mdc-radio-unchecked-color: var(--mo-color-foreground) !important;
     --mdc-checkbox-unchecked-color: var(--mo-color-foreground-transparent) !important;
     --mdc-linear-progress-buffer-color: var(--mo-color-gray) !important;
-    --mdc-theme-on-surface: var(--mo-color-foreground) !important;
-    --mdc-theme-surface: var(--mo-surface) !important;
+    --mdc-theme-on-surface: var(--mo-color-foreground-transparent) !important;
+    --mdc-theme-surface: var(--mo-color-surface) !important;
     --mdc-select-fill-color: var(--mo-field-background) !important;
     --mdc-select-ink-color: var(--mo-color-foreground) !important;
     --mdc-select-label-ink-color: var(--mo-color-gray) !important;
@@ -110,7 +150,6 @@
     --mdc-icon-button-size: calc(var(--mo-icon-size) * 2) !important;
     --mdc-dialog-heading-ink-color: var(--mo-color-foreground) !important;
     --mdc-dialog-content-ink-color: var(--mo-color-foreground-transparent) !important;
-    --mdc-theme-on-surface: var(--mo-color-foreground-transparent) !important;
     --mdc-theme-text-hint-on-background: var(--mo-color-foreground-transparent) !important;
     --mdc-theme-text-icon-on-background: var(--mo-color-gray) !important;
     --mdc-tab-color-default: var(--mo-color-foreground-transparent) !important;
@@ -122,27 +161,27 @@
     --mdc-dialog-scrim-color: var(--mo-scrim) !important;
 }
 
-mo-application[theme='light'] {
+mo-application-host[theme='light'] {
     --mo-color-background-base: 255, 255, 255;
     --mo-color-foreground-base: 0, 0, 0;
     --mo-color-background: rgb(220, 221, 225) !important;
     --mo-color-foreground: black !important;
     --mo-color-foreground-transparent: rgb(48, 48, 48) !important;
-    --mo-surface: rgb(255, 255, 255) !important;
+    --mo-color-surface: rgb(255, 255, 255) !important;
     --mo-shadow-base: 95, 81, 78;
     --mo-color-error: rgb(176, 0, 32);
     --mo-hover-background: rgba(0, 0, 0, .05);
     --mo-field-background: rgba(var(--mo-color-foreground-base), 0.09);
-    --mo-field-menu-background: var(--mo-surface);
+    --mo-field-menu-background: var(--mo-color-surface);
     --mo-field-menu-filter: brightness(0.91);
     --mo-alternating-background: rgba(var(--mo-color-foreground-base), 0.05);
 }
 
-mo-application[theme='dark'] {
+mo-application-host[theme='dark'] {
     --mo-color-background-base: 0, 0, 0;
     --mo-color-foreground-base: 255, 255, 255;
     --mo-color-background: rgb(16, 17, 20) !important;
-    --mo-surface: rgb(42, 43, 47) !important;
+    --mo-color-surface: rgb(42, 43, 47) !important;
     --mo-color-foreground: white !important;
     --mo-color-foreground-transparent: rgb(220, 220, 220) !important;
     --mo-shadow-base: 0, 1, 3;
@@ -152,46 +191,4 @@ mo-application[theme='dark'] {
     --mo-field-menu-background: var(--mo-color-background);
     --mo-field-menu-filter: unset;
     --mo-alternating-background: rgba(var(--mo-color-background-base), 0.2);
-}
-
-* {
-    font-family: var(--mo-font-family);
-    font-weight: 400;
-    color: var(--mo-foreground);
-    box-sizing: border-box;
-}
-
-html {
-    height: 100%;
-    height: 100%;
-    scrollbar-width: thin;
-    scrollbar-color: var(--mo-scrollbar-foreground-color) var(--mo-scrollbar-background-color);
-}
-
-/* TODO [MIG]: body {
-    position: absolute;
-    font-size: var(--mo-fontsize-d);
-    margin: 0;
-    width: 100% !important;
-    height: 100% !important;
-    background-color: var(--mo-background);
-    overflow: hidden;
-} */
-
-body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: auto;
-}
-
-::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
-    background-color: var(--mo-scrollbar-background-color);
-}
-
-::-webkit-scrollbar-thumb {
-    background: var(--mo-scrollbar-foreground-color);
 }
