--- a/www/styles/theme.css
+++ b/www/styles/theme.css
@@ -46,6 +46,7 @@ body {
 mo-application-host {
     --mo-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --mo-border-radius: 4px;
+    --mo-top-app-bar-height: 48px;
     /* Lengths */
     --mo-length-1: 480px;
     --mo-length-2: 768px;
@@ -86,7 +87,7 @@ mo-application-host {
     --mo-font-size-xl: 24px;
     --mo-font-size-xxl: 36px;
     --mo-font-size-xxxl: 48px;
-    --mo-font-size-icon: var(--mo-font-size-l);
+    --mo-font-size-icon: 20px;
     /* Spaces */
     --mo-thickness-xs: 2px;
     --mo-thickness-s: 4px;
