feat: add CSS variable type hints

--- a/www/styles/theme.css
+++ b/www/styles/theme.css
@@ -88,7 +88,7 @@ mo-application-host {
     --mo-font-size-xxl: 36px;
     --mo-font-size-xxxl: 48px;
     --mo-font-size-icon: 20px;
-    /* Spaces */
+    /* Thickness */
     --mo-thickness-xs: 2px;
     --mo-thickness-s: 4px;
     --mo-thickness-m: 6px;
