chore: set global font size

--- a/www/styles/theme.css
+++ b/www/styles/theme.css
@@ -13,6 +13,7 @@
 * {
     font-family: var(--mo-font-family);
     font-weight: 400;
+    font-size: var(--mo-font-size-m);
     color: var(--mo-color-foreground);
     box-sizing: border-box;
 }
