--- a/www/styles/theme.css
+++ b/www/styles/theme.css
@@ -43,7 +43,7 @@ body {
     background: var(--mo-scrollbar-foreground-color);
 }
 
-mo-application-host {
+#application {
     --mo-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --mo-border-radius: 4px;
     --mo-top-app-bar-height: 48px;
@@ -152,7 +152,7 @@ mo-application-host {
     --mdc-dialog-scrim-color: var(--mo-scrim) !important;
 }
 
-mo-application-host[theme='light'] {
+#application[theme='light'] {
     --mo-color-background-base: 255, 255, 255;
     --mo-color-foreground-base: 0, 0, 0;
     --mo-color-background: rgb(220, 221, 225) !important;
@@ -169,7 +169,7 @@ mo-application-host[theme='light'] {
     --mo-alternating-background: rgba(var(--mo-color-foreground-base), 0.05);
 }
 
-mo-application-host[theme='dark'] {
+#application[theme='dark'] {
     --mo-color-background-base: 0, 0, 0;
     --mo-color-foreground-base: 255, 255, 255;
     --mo-color-background: rgb(16, 17, 20) !important;
